--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,5 @@
-{"printWidth": 100,
+{
+  "printWidth": 100,
   "tabWidth": 2,
   "useTabs": false,
   "semi": true,
@@ -7,4 +8,5 @@
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "arrowParens": "avoid",
-  "proseWrap": "always"}
+  "proseWrap": "always"
+}
